# pcag

./: .gitignore  LICENSE  README.md  package_online_resources.py  pyproject.toml  requirements-isaac.txt
config/: README.md  cbf_mappings.yaml  executor_mappings.yaml  sensor_mappings.yaml  services.yaml
docker/: docker-compose.db.yml
pcag/: README.md
pcag/apps/: README.md  __init__.py
pcag/core/: README.md
pcag/plugins/: README.md
scripts/: README.md  check_services.py  seed_agv_benchmark_policy.py  seed_pcag_benchmark_policy.py  seed_policy.py  seed_process_benchmark_policy.py  seed_robot_benchmark_policy.py  start_safety_cluster.py  start_services.py  stop_services.py  test_gateway.py  test_isaac_sensor.py  test_logging.py  test_persistent_tx.py
tests/: README.md
tests/e2e/: README_document_conformance_eval.md  README_live_gateway_eval.md  document_conformance_eval_30.json  document_conformance_eval_support.py  live_gateway_eval_dataset.json  live_gateway_eval_support.py  run_document_conformance_eval.py  run_live_gateway_eval.py  run_live_gateway_eval_repeat.py  test_all_scenarios.py  test_document_conformance_eval.py  test_failhard_scenarios.py  test_franka_realworld.py  test_live_gateway_eval.py  test_real_pipeline.py  test_three_scenarios.py
tests/integration/: test_pipeline_mock.py  test_postgres_integration.py
tests/isaac_sim/: isaac_sim_server.py  physics_test_output.txt  test_isaac_sim_api.py  test_isaac_sim_basic.py  test_isaac_sim_gui.py  test_isaac_sim_physics.py  test_scenario_b_robot_arm.py
tests/modbus/: test_modbus_executor.py  (+1 more)
(+354 files in other folders)
